test/libyul/yulSyntaxTests/setimmutable.yul
{
    setimmutable("address", 0x1234567890123456789012345678901234567890)
}
// ====
// dialect: evm
// ----
// TypeError 5017: (6-18): The identifier "setimmutable" is reserved and can not be used.
